# THE-BEST-BOT2

./: .env  .env.example  .gitignore  ADA-USDT_historical.json  BTC-USDT_15m_historical.json  BTC-USDT_30m_historical.json  BTC-USDT_historical.json  DOGE-USDT_historical.json  DOT-USDT_historical.json  ETH-USDT_historical.json  LINK-USDT_historical.json  OKX_README.md  PEPE-USDT_historical.json  README.md  SOL-USDT_historical.json  XRP-USDT_historical.json  __init__.py  adx.py  api_test.py  ascending_triangle.py  atr.py  bbands.py  bear_flag.py  channels.py  check_okx_api.py  classic_patterns.py  config.py  current_prices.json  data_validator.py  debug_analysis.py  double_bottom.py  falling_wedge.py  fibonacci.py  full_check.py  indicators.py  macd.py  main.py  main_bot.py  moving_averages.py  obv.py  (+26 more)
analysis/: fibonacci.py  trend_lines.py
data/: cache.db
src/: app.py  cache_manager.py  config.py  database.py  localization.py  retry_handler.py  service_manager.py  settings.py  telegram_bot.py  trade_management.py  validators.py
tests/: conftest.py  test_advanced_indicators.py  test_analysis_results.py  test_ascending_triangle.py  test_base_pattern.py  test_bot_workflow.py  test_bug_fix.py  test_cache_manager.py  test_chart_generator.py  test_data_fetcher.py  test_data_format.py  test_data_structure.py  test_decision_engine.py  test_fibo_analyzer.py  test_fibonacci.py  test_formatter.py  test_indicators.py  test_integration.py  test_new_indicators.py  test_new_support_resistance.py  test_okx_data_fetcher.py  test_okx_fetcher.py  test_orchestrator.py  test_patterns.py  (+13 more)
(+129 files in other folders)
