[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-best-bot"
version = "1.0.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A comprehensive cryptocurrency trading bot."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
